--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1"
+  },
+  "dependencies": {
+    "@googlemaps/js-api-loader": "^1.11.3"
   }
 }
